fix: z-index for userMenu more than skeleton loader

--- a/src/Components/Shared/UserMenu/UserMenu.module.scss
+++ b/src/Components/Shared/UserMenu/UserMenu.module.scss
@@ -5,7 +5,7 @@
   left: -191px;
   min-width: 224px;
   border-radius: 4px;
-  z-index: 20;
+  z-index: 30;
   background: rgba(0, 0, 0, .34);
   box-shadow: 0 4px 30px rgba(0, 0, 0, .1);
   backdrop-filter: blur(45.4px);
